Clean up generics and pragmata